--- a/.gitignore
+++ b/.gitignore
@@ -147,8 +147,6 @@ dmypy.json
 
 # папки со статикой и медиа
 media/
-
-# Testing
-build_tests/
-yap_testing
-html/img/img/
+static/
+static-dev/
+html/
